<?xml version="1.0"?>
<package format="3">
  <name>robotiq_test_moveit</name>
  <version>1.0.0</version>
  <description>Moveit2 description of Universal Robot with Onrobot's RG2 gripper</description>
  <maintainer email="kreis@cs.uni-bonn.de">Benedikt Kreis</maintainer>
  <author>Benedikt Kreis</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>tf2_eigen</depend>
  <depend>moveit_visual_tools</depend>
  <depend>rviz_visual_tools</depend>

<!--
  <depend>control_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_servo</depend>
  <depend>moveit_hybrid_planning</depend>
  <depend>pluginlib</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
-->


  <build_depend>eigen</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_common</build_depend>
  <build_depend>moveit_ros_planning</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ur_rg2_description</exec_depend>
  <exec_depend>ur_rg2_moveit_config</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
